hphp/test/zend/bad/ext/spl/tests/iterator_065.php
<?php
class myRecursiveCachingIterator  extends RecursiveCachingIterator  {}
try {
	$it = new myRecursiveCachingIterator();
} catch (InvalidArgumentException $e) {
	echo 'InvalidArgumentException thrown';
}
?>